src/objects/PMF_Finca_Categoria_3__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identificacion_de_zonas_erosionadas__c</fullName>
        <label>Identificación de zonas erosionadas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 2, &apos;c. Bajo&apos;, IF (Puntaje_categoria__c &lt; 3, &apos;b. Medio&apos;, &apos;a. Alto&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Conservación de suelos&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoria 3 - Conserv suelos</relationshipLabel>
        <relationshipName>PMF_Finca_Categorias_3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Puntaje_Identificacion_de_zonas_erosiona__c</fullName>
        <formula>IF( ISPICKVAL( Identificacion_de_zonas_erosionadas__c , &apos;Sí&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Identificación de zonas erosiona</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Recuperacion_de_zonas_erosionada__c</fullName>
        <formula>IF(  OR( 
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Curvas a nivel&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Terrazas individuales&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Terrazas de banco&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Barreras vivas&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Barreras físicas&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Acequias&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Cultivos de cobertura de suelo&apos;),
INCLUDES( Recuperacion_de_zonas_erosionadas__c , &apos;Mulch (colchon de materia orgánica)&apos;)
)  , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Recuperación de zonas erosionada</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Reforestacion_especies_nativas__c</fullName>
        <formula>IF( ISPICKVAL(  Reforestacion_con_especies_nativas__c , &apos;Sí&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Reforestación especies nativas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Identificacion_de_zonas_erosiona__c +  
Puntaje_Recuperacion_de_zonas_erosionada__c +  
Puntaje_Reforestacion_especies_nativas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recuperacion_de_zonas_erosionadas__c</fullName>
        <label>Recuperación de zonas erosionadas</label>
        <picklist>
            <picklistValues>
                <fullName>Curvas a nivel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas individuales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrazas de banco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras vivas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barreras físicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acequias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivos de cobertura de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulch (colchon de materia orgánica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No realiza ninguna de esas prácticas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reforestacion_con_especies_nativas__c</fullName>
        <label>Reforestación con especies nativas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categoria 3 - Conserv. suelos</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 3 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categorias 3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>